--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
+    "pg-format": "^1.0.4",
     "supertest": "^7.0.0"
   },
   "devDependencies": {
